# docker/openapi.json
@@ -454,6 +454,19 @@
   }
 },
 
+"/ingredients/drink":{
+  "get":{
+    "tags":["Ingredients"],
+    "summary":"Get all ingredients by drink_id",
+    "parameters":[
+      {
+        "$ref":"#/components/parameters/IdQuery"
+      }
+    ],
+    "responses":{"200":{"description":"OK"}}
+  }
+},
+
 "/providers":{
   "get":{
     "tags":["Providers"],
